k8s/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: streamingapp
  labels:
    app.kubernetes.io/managed-by: helm
